2004-09-16  John Levon  <levon@movementarian.org>

	* m4/configmodule.m4: disable x86-64 on 2.4

2004-09-15  Maynard P. Johnson  <maynardj@us.ibm.com>

	* events/Makefile.am:
	* libop/op_cpu_type.h:
	* libop/op_events.h:
	* libop/op_events.c:
	* utils/op_help.c:
	* utils/opcontrol: PPC64 support
	
2004-09-13  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.8.2cvs

2004-09-11  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.8.1

2004-09-11  John Levon  <levon@movementarian.org>

	* libpp/locate_images.h: doxygen for archive_path

2004-08-18  Will Cohen  <wcohen@redhat.com>

	* doc/oprofile.xml: List default events in documentation.

2004-08-12  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: we need to verify
	functionname is non-NULL in *both* places

2004-08-12  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: add a hack to support
	Objective C

2004-07-21  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_manage.c: thinko in #931871 bug fix.

2004-07-21  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: fix opreport -m lib, broken in 0.8
	  when using opcontrol --separate=kernel with message
	  "add_to_profile_sample_files(): sample file parsed twice"

2004-07-18  John Levon  <levon@movementarian.org>

	* libop/op_mangling.c: dep image always used
	'{root}' token

2004-07-15  John Levon  <levon@movementarian.org>

	* doc/internals.xml: document some more

2004-07-09  John Levon  <levon@movementarian.org>

	* libpp/populate.cpp: quash timestamp warnings
	 when using archive: profile specifier

2004-07-09  John Levon  <levon@movementarian.org>

	* pp/opstack_options.cpp: include call-graph
	  files in archive.

2004-07-06  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* libpp/profile_spec.h:
	* libpp/profile_spec.cpp: remove sample-file
	  and binary profile specifiers

	* doc/opcontrol.1.in:
	* doc/oprofile.xml:
	* pp/common_option.cpp: