@@ -1,3 +1,7 @@
+2004-09-17  Anton Blanchard  <anton@samba.org>
+
+	* libop/op_events.c: fix compile warnings
+
 2004-09-16  John Levon  <levon@movementarian.org>
 
 	* m4/configmodule.m4: disable x86-64 on 2.4
